# da_shoppe

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: analytics.py  products.py
backend/app/services/: data_service.py
docs/: NEXT_PROJECT_PLAN.md  SKILLS_PORTFOLIO.md
frontend/: .dockerignore  Dockerfile  next.config.mjs
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/analytics/: page.js
frontend/src/components/: KpiCard.js  ProductModal.js  RatingChart.js  ReviewsModal.js  ScatterChart.js  SentimentChart.js  Sidebar.js  TopProductsTable.js
frontend/src/lib/: api.js
ingestion/: __init__.py  __main__.py  cli.py  config.py
ingestion/schemas/: __init__.py  product_schema.py  review_schema.py
ingestion/scrapers/: __init__.py  base_scraper.py  shopee_scraper.py
ingestion/writers/: __init__.py  jsonl_writer.py
ml/: sentiment_analysis.py
monitoring/grafana/dashboards/: fastapi.json
monitoring/prometheus/: prometheus.yml
processing/bronze/: json_to_bronze.py
processing/gold/: product_metrics.py  verify_gold.py
processing/silver/: products_cleansing.py  reviews_cleansing.py
processing/utils/: spark_session.py
scripts/: crawler_agent.py  download_hadoop335.py  download_hadoop340.py  download_hadoop_working.py  download_winutils.py  download_winutils_v2.py  fix_hadoop.py
test/: test_backend.py  test_shopee.py
(+3 files in other folders)
