[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingestion*"]

[project]
name = "ecommerce-analytics-platform"
version = "0.1.0"
description = "Vietnam E-Commerce Analytics Platform — Data Lakehouse + Full-Stack Analytics"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # === Scraping ===
    "playwright>=1.40.0",

    # === Data Validation ===
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # === Logging ===
    "loguru>=0.7.0",

    # === CLI & Config ===
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
processing = [
    "pyspark>=3.5.0",
    "delta-spark>=3.0.0",
]
backend = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
]
ml = [
    "underthesea>=6.8.0",
    "scikit-learn>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py311"]
